force-app/main/default/objects/OPP_Favorite_Application__c.object
<CustomObject>
    <fields>
        <fullName>No__c</fullName>
        <label>No</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPP Application</label>
        <referenceTo>OPP_Application__c</referenceTo>
        <relationshipLabel>OPP Favorite Application</relationshipLabel>
        <relationshipName>OPP_Favorite_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OPP_Favorite_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite Applications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>No__c</columns>
        <columns>OPP_Application__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OPP_Application__c</columns>
        <columns>User__c</columns>
        <columns>No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Somyod</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>OPP Favorite Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>